--- a/style.css
+++ b/style.css
@@ -230,6 +230,66 @@ header.sticky .navication li a:hover
 }
 /* recipies start */
 
+/* shafe start */
+.shafe-sec{
+    text-align: center;
+    margin-top: 200px;
+}
+.shafe-sec p{
+    font-size: 25px;
+    color: rgba(2, 1, 0, 0.904);
+    padding-bottom: 50px;
+    width: 50%;
+    margin: 0 auto;
+}
+.shafe-sec h1{
+    font-size: 60px;
+    padding-bottom: 50px;
+}
+.main-shafe-div{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+.shafe-1{
+    width: 25%;
+    margin: 25px;
+    box-shadow: rgb(206 191 191) 0px 0px 10px 0px;
+    border-radius:10px;
+}
+.shafe-2{
+    width: 25%;
+    margin: 25px;
+    box-shadow: rgb(206 191 191) 0px 0px 10px 0px;
+    border-radius:10px;
+}
+.shafe-3{
+    width: 25%;
+    margin: 25px;
+    box-shadow: rgb(206 191 191) 0px 0px 10px 0px;
+    border-radius:10px;
+}
+.main-shafe-div img{
+    width: 100%;
+    height: 500px;
+    border-radius:20px;
+    padding: 10px;
+}
+.main-shafe-div h1{
+    font-size: 35px;
+}
+.shafe-1 {
+    padding-bottom: 20px;
+}
+.shafe-2 {
+    padding-bottom: 20px;
+}
+.shafe-3 {
+    padding-bottom: 20px;
+}
+/* shafe end */
+
 /* folower start */
 .sec-folower {
     width: 100%;
